Tidy Common project dependencies and package references.

--- a/src/Common/MasterDataProxies/test/UnitTests/VSS.MasterData.Proxies.UnitTests.csproj
+++ b/src/Common/MasterDataProxies/test/UnitTests/VSS.MasterData.Proxies.UnitTests.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\VSS.Common.Cache.MemoryCache\src\VSS.Common.Cache.MemoryCache.csproj" />
     <ProjectReference Include="..\..\src\VSS.MasterData.Proxies.csproj" />
   </ItemGroup>
 
