--- a/src/Common/VSS.DataOcean.Client/src/VSS.DataOcean.Client.csproj
+++ b/src/Common/VSS.DataOcean.Client/src/VSS.DataOcean.Client.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\..\..\service\Push\Models\VSS.Productivity.Push.Models\VSS.Productivity.Push.Models.csproj" />
     <ProjectReference Include="..\..\ConfigurationStore\src\VSS.ConfigurationStore.csproj" />
     <ProjectReference Include="..\..\MasterDataProxies\src\VSS.MasterData.Proxies.csproj" />
+    <ProjectReference Include="..\..\VSS.Common.Cache.MemoryCache\src\VSS.Common.Cache.MemoryCache.csproj" />
   </ItemGroup>
 
 </Project>
