--- a/src/Common/CCSS.CWS.Client/src/CCSS.CWS.Client.csproj
+++ b/src/Common/CCSS.CWS.Client/src/CCSS.CWS.Client.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\MasterDataProxies\src\VSS.MasterData.Proxies.csproj" />
     <ProjectReference Include="..\..\VSS.Common.Abstractions\src\VSS.Common.Abstractions.csproj" />
+    <ProjectReference Include="..\..\VSS.Common.Cache.MemoryCache\src\VSS.Common.Cache.MemoryCache.csproj" />
   </ItemGroup>
 
 </Project>
