--- a/src/service/TRex/deploy/templates/utils/utils-job.yaml
+++ b/src/service/TRex/deploy/templates/utils/utils-job.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.utilities.deployServiceDeployerJob }}
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
@@ -49,3 +50,4 @@ spec:
                   value: {{ .Values.utilities.javaHeapMaxSizeMb | quote }}
                 - name: TREX_IGNITE_JVM_INITIAL_HEAP_SIZE_MB
                   value: {{ .Values.utilities.javaHeapInitialSizeMb | quote }}  
+{{ end }}
