--- a/src/service/TRex/deploy/values.yaml
+++ b/src/service/TRex/deploy/values.yaml
@@ -212,6 +212,7 @@ tinExportServer:
 utilities:
   deploy: true
   replicaCount: 0
+  deployServiceDeployerJob: false
   javaHeapMaxSizeMb: 768
   javaHeapInitialSizeMb: 768  
   resources: 
