--- a/src/Common/FlowJSMVC/src/VSS.FlowJSHandler.csproj
+++ b/src/Common/FlowJSMVC/src/VSS.FlowJSHandler.csproj
@@ -18,6 +18,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\AWS.TransferProxy\src\VSS.AWS.TransferProxy.csproj" />
+  </ItemGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>full</DebugType>
     <DebugSymbols>True</DebugSymbols>
