--- a/src/service/TRex/src/netstandard/VSS.TRex.CellDatum/VSS.TRex.CellDatum.csproj
+++ b/src/service/TRex/src/netstandard/VSS.TRex.CellDatum/VSS.TRex.CellDatum.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\VSS.TRex.Filters\VSS.TRex.Filters.csproj" />
     <ProjectReference Include="..\VSS.TRex.GridFabric\VSS.TRex.GridFabric.csproj" />
     <ProjectReference Include="..\VSS.TRex.Pipelines.Interfaces\VSS.TRex.Pipelines.Interfaces.csproj" />
     <ProjectReference Include="..\VSS.TRex.SiteModels.Interfaces\VSS.TRex.SiteModels.Interfaces.csproj" />
