--- a/src/service/Entitlements/Service/VSS.Productivity3D.Entitlements/VSS.Productivity3D.Entitlements.WebApi.csproj
+++ b/src/service/Entitlements/Service/VSS.Productivity3D.Entitlements/VSS.Productivity3D.Entitlements.WebApi.csproj
@@ -29,6 +29,7 @@
     <ProjectReference Include="..\..\..\Push\Clients\VSS.Productivity3D.Push.Clients\VSS.Productivity3D.Push.Clients.csproj" />
     <ProjectReference Include="..\..\..\Push\WebAPI\VSS.Productivity3D.Push.WebAPI\VSS.Productivity3D.Push.WebAPI.csproj" />
     <ProjectReference Include="..\..\Clients\VSS.Productivity3D.Entitlements.Abstractions\VSS.Productivity3D.Entitlements.Abstractions.csproj" />
+    <ProjectReference Include="..\VSS.Productivity3D.Entitlements.Common\VSS.Productivity3D.Entitlements.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
