1192 Fix assignment of new CSIB to sitemodel. And assignment of CSIB from targetsitemodel

--- a/src/service/TRex/tests/netstandard/TAGFiles.Tests/TAGFiles.Tests.csproj
+++ b/src/service/TRex/tests/netstandard/TAGFiles.Tests/TAGFiles.Tests.csproj
@@ -63,6 +63,11 @@
   <Target Name="CopyCustomContent" AfterTargets="AfterBuild">
     <Copy SourceFiles="@(TestData)" DestinationFolder="$(OutputPath)/TestData/%(RecursiveDir)" SkipUnchangedFiles="true" />
   </Target>
+  <ItemGroup>
+    <None Include="bin\Debug\netcoreapp3.1\Geodata\ausgeoid.ggf" />
+    <None Include="bin\Debug\netcoreapp3.1\Geodata\demin.ggf" />
+    <None Include="bin\Debug\netcoreapp3.1\Geodata\ww15mgh.ggf" />
+  </ItemGroup>
   <!-- End bulk copy. -->
 
   <ItemGroup>
