--- a/src/service/Entitlements/test/UnitTests/VSS.Productivity3D.Entitlements.UnitTests/VSS.Productivity3D.Entitlements.UnitTests.csproj
+++ b/src/service/Entitlements/test/UnitTests/VSS.Productivity3D.Entitlements.UnitTests/VSS.Productivity3D.Entitlements.UnitTests.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\Common\Productivity3DModels\src\VSS.Productivity3D.Models.csproj" />
     <ProjectReference Include="..\..\..\Clients\VSS.Productivity3D.Entitlements.Proxy\VSS.Productivity3D.Entitlements.Proxy.csproj" />
+    <ProjectReference Include="..\..\..\Service\VSS.Productivity3D.Entitlements\VSS.Productivity3D.Entitlements.WebApi.csproj" />
   </ItemGroup>
 
 </Project>
