--- a/src/Common/CoreX.Wrapper/src/Models/CoreX.Models.csproj
+++ b/src/Common/CoreX.Wrapper/src/Models/CoreX.Models.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>CoreX</RootNamespace>
+    <RootNamespace>CoreXModels</RootNamespace>
     <AssemblyName>CoreX.Models</AssemblyName>
   </PropertyGroup>
 
