CCSSSCON-1495: Renaming refactoring in TRex.

--- a/src/service/TRex/src/netstandard/VSS.TRex.Geometry/VSS.TRex.Geometry.csproj
+++ b/src/service/TRex/src/netstandard/VSS.TRex.Geometry/VSS.TRex.Geometry.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\VSS.TRex.Common\VSS.TRex.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CoreX\" />
+  </ItemGroup>
+
 </Project>
