1483 Improve logging in Megalodon

--- a/src/service/Megalodon/src/TagFile.Dispatch/appsettings.json
+++ b/src/service/Megalodon/src/TagFile.Dispatch/appsettings.json
@@ -24,6 +24,7 @@
   "SendTagFilesDirect": true,
   "DebugTraceToLog": false,
   "TransmissionProtocolVersion": "1",
+  "ApplicationVersion": "1.5",
   "production-host": "https://api.trimble.com",
   "production-base": "/t/trimble.com/ccss-tagfile-gateway/1.0"
 }
