--- a/src/Common/CoreX.Wrapper/src/CoreX/CoreX.Wrapper.csproj
+++ b/src/Common/CoreX.Wrapper/src/CoreX/CoreX.Wrapper.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\LoggingExtensions\SerilogExtensions\VSS.Serilog.Extensions.csproj" />
     <ProjectReference Include="..\..\..\VSS.Common.Abstractions\src\VSS.Common.Abstractions.csproj" />
     <ProjectReference Include="..\Models\CoreX.Models.csproj" />
   </ItemGroup>
