#CCSSSCON-1533 protomember needed on error code and message

--- a/src/service/3DP/Clients/Models/VSS.Productivity3D.Productivity3D.Models.csproj
+++ b/src/service/3DP/Clients/Models/VSS.Productivity3D.Productivity3D.Models.csproj
@@ -22,4 +22,8 @@
     <Folder Include="ProductionData\ResultHandling\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="WebApiContrib.Core.Formatter.Protobuf" Version="2.1.3" />
+  </ItemGroup>
+
 </Project>
