CCSSSSCON-1506: Added HealthCheck controller; Fixed runtime container entrypoint.

--- a/src/service/Healthz/test/UnitTests/CCSS.WorksOS.Healthz.UnitTests.csproj
+++ b/src/service/Healthz/test/UnitTests/CCSS.WorksOS.Healthz.UnitTests.csproj
@@ -5,6 +5,10 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>NU1701;1702</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
