--- a/src/service/Healthz/Service/CCSS.WorksOS.Healthz/CCSS.WorksOS.Healthz.csproj
+++ b/src/service/Healthz/Service/CCSS.WorksOS.Healthz/CCSS.WorksOS.Healthz.csproj
@@ -9,7 +9,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors />
-    <NoWarn>1701;1702;1591</NoWarn>
+    <NoWarn>NU1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
