--- a/src/Common/MasterDataProxies/src/VSS.MasterData.Proxies.csproj
+++ b/src/Common/MasterDataProxies/src/VSS.MasterData.Proxies.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="App.Metrics.Health.Abstractions" Version="3.2.0" />
+    <PackageReference Include="App.Metrics.Abstractions" Version="4.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
