--- a/src/Common/WebApi.Common/src/VSS.WebApi.Common.csproj
+++ b/src/Common/WebApi.Common/src/VSS.WebApi.Common.csproj
@@ -26,16 +26,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="App.Metrics.AspNetCore" Version="3.2.0" />
-    <PackageReference Include="App.Metrics.AspNetCore.Health" Version="3.2.0" />
-    <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="3.2.0" />
-    <PackageReference Include="App.Metrics.Formatters.Prometheus" Version="3.2.0" />
+    <PackageReference Include="App.Metrics" Version="4.1.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Core" Version="4.1.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Mvc.Core" Version="4.1.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Tracking" Version="4.1.0" />
+    <PackageReference Include="App.Metrics.Extensions.Middleware" Version="1.2.1" />
+    <PackageReference Include="App.Metrics.Formatters.Prometheus" Version="4.1.0" />
     <PackageReference Include="App.Metrics.Health.Checks.Http" Version="3.2.0" />
     <PackageReference Include="App.Metrics.Health.Checks.Network" Version="3.2.0" />
-    <PackageReference Include="App.Metrics.Health.Checks.Process" Version="3.2.0" />
-    <PackageReference Include="App.Metrics.Health.Reporting.Metrics" Version="3.2.0" />
-    <PackageReference Include="App.Metrics.Reporting.Console" Version="3.2.0" />
-    <PackageReference Include="App.Metrics.Reporting.InfluxDB" Version="3.2.0" />
+    <PackageReference Include="App.Metrics.Reporting.InfluxDB" Version="4.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.2" />
