--- a/src/service/TagFileAuth/deploy/templates/webapiservice.yaml
+++ b/src/service/TagFileAuth/deploy/templates/webapiservice.yaml
@@ -1,17 +1,16 @@
-{{- $serviceName := printf "%s-%s-%s" .Release.Name .Values.environment .Values.image.tag | lower | replace "_" "-" | trunc 63 | trimSuffix "-" -}}
 kind: Service
 apiVersion: v1
 metadata:
-  name: {{ $serviceName }}
+  name: {{ template "tagfileauthservice.name" . }}
   labels:
     service-name: {{ .Values.serviceName }}
-  annotations:
-    prometheus.io/scrape: "true"
+    app: {{ template "tagfileauthservice.name" . }}  
 spec:
   selector:
-    component: {{ template "component.webapi" . }}
+    app: {{ template "tagfileauthservice.name" . }}
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
   type: ClusterIP
+  
