--- a/src/service/TagFileAuth/src/WebApiModels/VSS.Productivity3D.TagFileAuth.WebAPI.Models.csproj
+++ b/src/service/TagFileAuth/src/WebApiModels/VSS.Productivity3D.TagFileAuth.WebAPI.Models.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <NoWarn>1701;1702;1705;NU1605</NoWarn>
+    <NoWarn>NU1701;1702;1705;NU1605</NoWarn>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors />
   </PropertyGroup>
