--- a/src/service/TagFileAuth/deploy/values.yaml
+++ b/src/service/TagFileAuth/deploy/values.yaml
@@ -10,8 +10,6 @@ globalConfig: 3dapp-alpha
 # Must match the const in VSS.Common.Abstractions.ServiceDiscovery.Constants.ServiceNameConstants
 serviceName: tagfileauth-service
 
-replicaCount: 1
-
 image:
   tag: latest
 
@@ -36,3 +34,14 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     external-dns.alpha.kubernetes.io/target: eks.ccss.cloud
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 2
+  cpu:
+    enabled: true
+    target: 75
+  memory:
+    enabled: false
+    target: 75
