CCSSSCON-1663: Convert site model change notification messages to compute invoke style

--- a/src/service/TRex/src/netstandard/VSS.TRex.SiteModels/VSS.TRex.SiteModels.csproj
+++ b/src/service/TRex/src/netstandard/VSS.TRex.SiteModels/VSS.TRex.SiteModels.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\VSS.TRex.Alignments.Interfaces\VSS.TRex.Alignments.Interfaces.csproj" />
     <ProjectReference Include="..\VSS.TRex.Common.Exceptions\VSS.TRex.Common.Exceptions.csproj" />
     <ProjectReference Include="..\VSS.TRex.Common\VSS.TRex.Common.csproj" />
