CCSSSCON-1506: Minor refactoring of the IntegrationTest.Utils project.

--- a/src/service/Healthz/test/IntegrationTests/CCSS.WorksOS.Healthz.IntegrationTests.csproj
+++ b/src/service/Healthz/test/IntegrationTests/CCSS.WorksOS.Healthz.IntegrationTests.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Common\IntegrationTests.Utils\CCSS.IntegrationTests.Utils.csproj" />
     <ProjectReference Include="..\..\..\..\Common\LoggingExtensions\SerilogExtensions\VSS.Serilog.Extensions.csproj" />
     <ProjectReference Include="..\..\Service\CCSS.WorksOS.Healthz\CCSS.WorksOS.Healthz.csproj" />
   </ItemGroup>
